<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ArraySize" />

    <EditText
        android:id="@+id/et_ArraySize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ArraySizeTips"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ArrayMaxValue" />

    <EditText
        android:id="@+id/et_ArrayMaxValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ArrayMaxValueTips"
        android:inputType="number" />

    <Button
        android:id="@+id/bt_Sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IndexSort" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Result" />
    </ScrollView>

</LinearLayout>
